--- a/个人简历.html
+++ b/个人简历.html
@@ -349,8 +349,7 @@ ul.auto-toc {
 <div class="section" id="id2">
 <h1>个人介绍</h1>
 <p>从进入大学以来，我一直在开源的世界上一路走来，其中使用过很过linux的发行版，包括ubuntu、Fedora、centos等。目前使用ubuntu作为我的主要的操作系统。在这个过程中我的计算机视野也开阔了不少，在使用linux的过程中，不知不觉中我就对python建立了很浓厚的兴趣，对python的语法、标准库、第三方库都有一定的使用经验。</p>
-<p><strong>自我评价</strong></p>
-<blockquote>
+<p><strong>技术上的积累和了解</strong></p>
 <ul class="simple">
 <li>有一定的语法基础、能理解和使用常用的算法和数据结构。</li>
 <li>熟悉使用git、hg等代码管理工具进行协作编程。</li>
@@ -359,32 +358,31 @@ ul.auto-toc {
 <li>能够使用twisted构建异步通信的server端或client端应用程序</li>
 <li>对数据挖掘方面有浓厚的兴趣，并希望未来向这个方向发展</li>
 </ul>
-</blockquote>
 </div>
 <div class="section" id="id3">
 <h1>过去所做过的事</h1>
 <ul>
 <li><dl class="first docutils">
 <dt>基于微博api数据的分析、挖掘与推荐系统</dt>
-<dd><p class="first last">利用新浪、腾讯等各大微博网站所提供的api做一个一站式的、多账户的微博收集与分析工具。通过中文的分词（利用sina提供的分词服务）获得其中的高频词汇，并且通过对发帖时间的分析，得到他个人发微的时间上的习惯。更进一步地，还可以通过对高频词汇的归类等形成我们自己的，有一定价值的推荐系统
-完成情况：
-过去曾经在一部分的功能上进行过编码，但是由于代码完全不能达到一个产品级别，过多的错误存在，所以现在所有的代码已经删除，未来需要进行产品的重新设计、编码、实现。</p>
+<dd><p class="first">利用新浪、腾讯等各大微博网站所提供的api做一个一站式的、多账户的微博收集与分析工具。通过中文的分词（利用sina提供的分词服务）获得其中的高频词汇，并且通过对发帖时间的分析，得到他个人发微的时间上的习惯。更进一步地，还可以通过对高频词汇的归类等形成我们自己的，有一定价值的推荐系统</p>
+<p>完成情况：</p>
+<p class="last">过去曾经在一部分的功能上进行过编码，但是由于代码完全不能达到一个产品级别，过多的错误存在，所以现在所有的代码已经删除，未来需要进行产品的重新设计、编码、实现。</p>
 </dd>
 </dl>
 </li>
 <li><dl class="first docutils">
 <dt>基于scrapy框架的商品信息抓取工具</dt>
-<dd><p class="first last">利用scrapy优秀的爬虫抓取框架。利用盛大云强大的、灵活的计算能力。利用mongodb简单的数据结构。于是很方便地。一个支持多种不同网站的商品信息的商品信息抓取工具就可以完成了。
-项目情况：
-实现后端的全部功能，能够顺利的抓取当当、amazon、京东等的数据。</p>
+<dd><p class="first">利用scrapy优秀的爬虫抓取框架。利用盛大云强大的、灵活的计算能力。利用mongodb简单的数据结构。于是很方便地。一个支持多种不同网站的商品信息的商品信息抓取工具就可以完成了。</p>
+<p>项目情况：</p>
+<p class="last">实现后端的全部功能，能够顺利的抓取当当、amazon、京东等的数据。</p>
 </dd>
 </dl>
 </li>
 <li><dl class="first docutils">
 <dt>系统账户的管理与维护</dt>
-<dd><p class="first last">这是在易度的实习过程中完成的产品。通过易度开发平台提供的API，根据用户的需求，完成系统账户的分部门管理，使得系统的管理变得更加简单、灵活。
-项目情况：
-在易度的同事的指导和帮助下，从项目的需求分析、界面设计、编码实现到测试。这个项目目前已经加入到易度应用平台上，可以被客户所使用。</p>
+<dd><p class="first">这是在易度的实习过程中完成的产品。通过易度开发平台提供的API，根据用户的需求，完成系统账户的分部门管理，使得系统的管理变得更加简单、灵活。</p>
+<p>项目情况：</p>
+<p class="last">在易度的同事的指导和帮助下，从项目的需求分析、界面设计、编码实现到测试。这个项目目前已经加入到易度应用平台上，可以被客户所使用。</p>
 </dd>
 </dl>
 </li>
@@ -393,6 +391,7 @@ ul.auto-toc {
 <div class="section" id="python">
 <h1>为什么选择python</h1>
 <p>因为这是一门解释型的语言，简单的语法、丰富的第三方库支持、同样，它是我学习的第一门语言。</p>
+<p>我迷恋一切简单而有趣的东西</p>
 </div>
 <div class="section" id="id4">
 <h1>为什么投你们公司</h1>
