--- a/_code/js_mode/test.html
+++ b/_code/js_mode/test.html
@@ -18,7 +18,7 @@
     </head>
 	<body>
 		<div class="tabArea">
-			<ul class"tabs">
+			<ul class="tabs">
 				<li><a href="#" class="none1">one</a></li>
 				<li><a href="#" class="none2">two</a></li>
 				<li><a href="#" class="none3">three</a></li>
